# website-lego-videogames-guide

./: .gitignore  package-lock.json  package.json  pyproject.toml
backend/: app.py  inject_data.py  models.py
backend/instance/: db.sqlite3
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/templates/: base.html  index.html
src/: App.jsx
