[project]
name = "website-lego-videogames-guide"
version = "0.1.0"
description = ""
authors = [
    {name = "noah smink",email = "571349@student.saxion.nl"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "flask-sqlalchemy-stubs (>=0.2,<0.3)",
    "sqlalchemy-stubs (>=0.4,<0.5)",
    "types-flask (>=1.1.6,<2.0.0)",
    "email-validator (>=2.2.0,<3.0.0)",
    "sqlalchemy (>=2.0.39,<3.0.0)",
    "flask-bcrypt (>=1.0.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
